--- a/public/about_me.html
+++ b/public/about_me.html
@@ -7,8 +7,7 @@
 <head>
     <meta name="description" content="Stacy Harris is a licensed Marriage and Family Therapist specializing in individual, couples and family therapy. She maintains a private practice in Redding, CA and has over nine years experience providing therapy and counseling."
     />
-    <meta name="keywords" content="Stacy, Harris, marriage, family, therapist, counseling, therapy, counselor, family counseling, child counseling, Redding, CA, 96001"
-    />
+    <meta name="keywords" content="Stacy, Harris, marriage, family, therapist, counseling, therapy, counselor, family counseling, child counseling, Redding, CA, 96001" />
     <meta name="author" content="Stacy Harris" />
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <title>About Me</title>
@@ -16,17 +15,18 @@
     <link rel="stylesheet" type="text/css" href="style.css" />
     <link rel="stylesheet" href="search.css" type="text/css" />
     <script type="text/javascript">
-
         var _gaq = _gaq || [];
         _gaq.push(['_setAccount', 'UA-254292-20']);
         _gaq.push(['_trackPageview']);
 
-        (function () {
-            var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
+        (function() {
+            var ga = document.createElement('script');
+            ga.type = 'text/javascript';
+            ga.async = true;
             ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
-            var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
+            var s = document.getElementsByTagName('script')[0];
+            s.parentNode.insertBefore(ga, s);
         })();
-
     </script>
 </head>
 
@@ -35,10 +35,12 @@
 
     <div id="searchbar">
         <div id="cse" style="width: 100%;">Loading</div>
-        <script src="http://www.google.com/jsapi" type="text/javascript"></script>
+        <script src="https://www.google.com/jsapi" type="text/javascript"></script>
         <script type="text/javascript">
-            google.load('search', '1', { language: 'en' });
-            google.setOnLoadCallback(function () {
+            google.load('search', '1', {
+                language: 'en'
+            });
+            google.setOnLoadCallback(function() {
                 var customSearchControl = new google.search.CustomSearchControl(
                     '008606337386153782073:izxqcfcz90e');
 
@@ -124,18 +126,15 @@
                             <strong>individual, couples and family therapy</strong>. She maintains a private practice in
                             <strong>Redding, CA</strong> and has over nine years experience providing
                             <strong>therapy</strong> and
-                            <strong>counseling</strong>. She received her Master's in Psychology Counseling in 2003. She has received
-                            additional training in
+                            <strong>counseling</strong>. She received her Master's in Psychology Counseling in 2003. She has received additional training in
                             <strong>Parent Child Interactive Therapy</strong>, led parenting groups through
                             <strong>Shasta County</strong> Office of Education; Early Childhood Services and is
                             <strong>certified in EMDR</strong>, a highly effective way to treat trauma related issues.
 
-                            <p>She chose this profession because she deeply values the enrichment and preservation of relationships.
-                                She has been married for over thirty years and has five children, which give her a valuable
-                                perspective on the importance of relationships. She enjoys
+                            <p>She chose this profession because she deeply values the enrichment and preservation of relationships. She has been married for over thirty years and has five children, which give her a valuable perspective on the importance
+                                of relationships. She enjoys
                                 <strong>counseling</strong> with people, and providing a non-judgmental, caring and
-                                <strong>safe environment</strong>. She likes working with individuals, couples, children, and adolescents
-                                on a variety of issues including
+                                <strong>safe environment</strong>. She likes working with individuals, couples, children, and adolescents on a variety of issues including
                                 <em>anxiety, depression, stress management, grief and loss, trauma, parenting concerns, relationship
                                     problems and relationship enrichment</em>, particularly the one with our self.
 
@@ -143,11 +142,8 @@
                                     <strong>collaborative</strong>,
                                     <strong>supportive</strong> and
                                     <strong>goal oriented</strong>. Her emphasis in
-                                    <strong>therapy</strong> is from a Cognitive Behavioral (CBT) perspective, which emphasizes the
-                                    importance of our thoughts and how they drive our emotions and behavior. She combines
-                                    interventions consistent with CBT to offer an extremely personalized approach that fits
-                                    each client. She is committed to helping clients achieve the personal growth they are
-                                    seeking and she does this with understanding and compassion.
+                                    <strong>therapy</strong> is from a Cognitive Behavioral (CBT) perspective, which emphasizes the importance of our thoughts and how they drive our emotions and behavior. She combines interventions consistent with CBT
+                                    to offer an extremely personalized approach that fits each client. She is committed to helping clients achieve the personal growth they are seeking and she does this with understanding and compassion.
 
                                     <p>
                                         <b>License</b>
