--- a/public/index.html
+++ b/public/index.html
@@ -7,8 +7,7 @@
 <head>
     <meta name="description" content="Stacy Harris has over nine years of experience providing therapy and counseling, with additional training in Parent Child Interactive Therapy (PCIT). She is certified in EMDR, an effective way to treat trauma related issues."
     />
-    <meta name="keywords" content="Stacy, Harris, marriage, family, therapist, counseling, therapy, counselor, family counseling, child counseling, Redding, CA, 96001"
-    />
+    <meta name="keywords" content="Stacy, Harris, marriage, family, therapist, counseling, therapy, counselor, family counseling, child counseling, Redding, CA, 96001" />
     <meta name="author" content="Stacy Harris" />
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <title>Stacy Harris - Licensed Marriage and Family Therapist, Redding CA</title>
@@ -16,17 +15,18 @@
     <link rel="stylesheet" type="text/css" href="style.css" />
     <link rel="stylesheet" href="search.css" type="text/css" />
     <script type="text/javascript">
-
         var _gaq = _gaq || [];
         _gaq.push(['_setAccount', 'UA-254292-20']);
         _gaq.push(['_trackPageview']);
 
-        (function () {
-            var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
+        (function() {
+            var ga = document.createElement('script');
+            ga.type = 'text/javascript';
+            ga.async = true;
             ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
-            var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
+            var s = document.getElementsByTagName('script')[0];
+            s.parentNode.insertBefore(ga, s);
         })();
-
     </script>
 </head>
 
@@ -35,10 +35,12 @@
 
     <div id="searchbar">
         <div id="cse" style="width: 100%;">Loading</div>
-        <script src="http://www.google.com/jsapi" type="text/javascript"></script>
+        <script src="https://www.google.com/jsapi" type="text/javascript"></script>
         <script type="text/javascript">
-            google.load('search', '1', { language: 'en' });
-            google.setOnLoadCallback(function () {
+            google.load('search', '1', {
+                language: 'en'
+            });
+            google.setOnLoadCallback(function() {
                 var customSearchControl = new google.search.CustomSearchControl(
                     '008606337386153782073:izxqcfcz90e');
 
@@ -119,16 +121,12 @@
                         <h2>Welcome</h2>
                         <hr>
                         <p>I believe
-                            <strong>therapy</strong> can be an opportunity to gain a unique perspective on the challenges occurring
-                            in our lives. These challenges can feel overwhelming at times. Getting
-                            <strong>effective counseling</strong> can help you discover your path toward personal enrichment and
-                            well-being.
+                            <strong>therapy</strong> can be an opportunity to gain a unique perspective on the challenges occurring in our lives. These challenges can feel overwhelming at times. Getting
+                            <strong>effective counseling</strong> can help you discover your path toward personal enrichment and well-being.
 
                             <p>I like to provide a
-                                <strong>warm and friendly atmosphere</strong>; one that allows you to express feelings and explore
-                                options in a
-                                <strong>safe and protected environment</strong>, without blame or criticism. I can help you and/or
-                                your
+                                <strong>warm and friendly atmosphere</strong>; one that allows you to express feelings and explore options in a
+                                <strong>safe and protected environment</strong>, without blame or criticism. I can help you and/or your
                                 <strong>family</strong> resolve and identify solutions to the challenges of many issues, including:
                                 <em>anxiety, depression, relationship conflicts, stress, low self-esteem, grief/loss, parenting,
                                     trauma, and child/adolescent behaviors</em>.
@@ -137,8 +135,7 @@
                                     <strong>therapy</strong> and
                                     <strong>counseling</strong>, with additional training in
                                     <strong>Parent Child Interactive Therapy (PCIT)</strong>. I am certified in
-                                    <strong>EMDR</strong>, an effective way to treat trauma related issues. I would be honored to
-                                    have the privilege of working with you.
+                                    <strong>EMDR</strong>, an effective way to treat trauma related issues. I would be honored to have the privilege of working with you.
 
                                     <p>Please
                                         <a href="contact">call me</a> for an
