--- a/public/learning_center.html
+++ b/public/learning_center.html
@@ -5,10 +5,8 @@
 <!-- Mirrored from stacyharrismft.com/learning_center by HTTrack Website Copier/3.x [XR&CO'2014], Thu, 07 Jun 2018 23:23:33 GMT -->
 
 <head>
-    <meta name="description" content="For more in depth resources feel free to click through the topics that you are interested in."
-    />
-    <meta name="keywords" content="Stacy, Harris, marriage, family, therapist, counseling, therapy, counselor, family counseling, child counseling, Redding, CA, 96001"
-    />
+    <meta name="description" content="For more in depth resources feel free to click through the topics that you are interested in." />
+    <meta name="keywords" content="Stacy, Harris, marriage, family, therapist, counseling, therapy, counselor, family counseling, child counseling, Redding, CA, 96001" />
     <meta name="author" content="Stacy Harris" />
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <title>Learning Center</title>
@@ -16,17 +14,18 @@
     <link rel="stylesheet" type="text/css" href="style.css" />
     <link rel="stylesheet" href="search.css" type="text/css" />
     <script type="text/javascript">
-
         var _gaq = _gaq || [];
         _gaq.push(['_setAccount', 'UA-254292-20']);
         _gaq.push(['_trackPageview']);
 
-        (function () {
-            var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
+        (function() {
+            var ga = document.createElement('script');
+            ga.type = 'text/javascript';
+            ga.async = true;
             ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
-            var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
+            var s = document.getElementsByTagName('script')[0];
+            s.parentNode.insertBefore(ga, s);
         })();
-
     </script>
 </head>
 
@@ -35,10 +34,12 @@
 
     <div id="searchbar">
         <div id="cse" style="width: 100%;">Loading</div>
-        <script src="http://www.google.com/jsapi" type="text/javascript"></script>
+        <script src="https://www.google.com/jsapi" type="text/javascript"></script>
         <script type="text/javascript">
-            google.load('search', '1', { language: 'en' });
-            google.setOnLoadCallback(function () {
+            google.load('search', '1', {
+                language: 'en'
+            });
+            google.setOnLoadCallback(function() {
                 var customSearchControl = new google.search.CustomSearchControl(
                     '008606337386153782073:izxqcfcz90e');
 
@@ -119,13 +120,11 @@
                         <h2>Learning Center</h2>
                         <hr>
 
-                        <p>Below are links to more in depth information on various topics. Feel free to click through to them
-                            to gain a better understanding of the topics.</p>
+                        <p>Below are links to more in depth information on various topics. Feel free to click through to them to gain a better understanding of the topics.</p>
 
                         <ul>
                             <li>
-                                <a href="http://www.counselingcalifornia.com/CCS/Marriage-Counseling/marriage-counseling.aspx"
-                                    target="_blank">Marriage, Relationship or Divorce Problems</a>
+                                <a href="http://www.counselingcalifornia.com/CCS/Marriage-Counseling/marriage-counseling.aspx" target="_blank">Marriage, Relationship or Divorce Problems</a>
                             </li>
                             <li>
                                 <a href="http://www.counselingcalifornia.com/CCS/Depression-Symptoms/depression.aspx" target="_blank">Depression</a>
@@ -137,12 +136,10 @@
                                 <a href="http://www.counselingcalifornia.com/CCS/Anxiety/anxiety.aspx" target="_blank">Anxiety</a>
                             </li>
                             <li>
-                                <a href="http://www.counselingcalifornia.com/CCS/Child-Behavior/Is-Your-Child-Driving-You-Crazy.aspx"
-                                    target="_blank">Child's Behavior Problems</a>
+                                <a href="http://www.counselingcalifornia.com/CCS/Child-Behavior/Is-Your-Child-Driving-You-Crazy.aspx" target="_blank">Child's Behavior Problems</a>
                             </li>
                             <li>
-                                <a href="http://www.counselingcalifornia.com/CCS/Family-Member-Problems/problems-with-family.aspx"
-                                    target="_blank">Problems with Family Members</a>
+                                <a href="http://www.counselingcalifornia.com/CCS/Family-Member-Problems/problems-with-family.aspx" target="_blank">Problems with Family Members</a>
                             </li>
                             <li>
                                 <a href="http://www.counselingcalifornia.com/CCS/Elder-Issues/elder-issues.aspx" target="_blank">Elder Issues</a>
@@ -154,8 +151,7 @@
                                 <a href="http://www.counselingcalifornia.com/CCS/Phobias/phobia.aspx" target="_blank">Phobias or Fears</a>
                             </li>
                             <li>
-                                <a href="http://www.counselingcalifornia.com/CCS/Difficulty-Concentrating/concentrating.aspx"
-                                    target="_blank">Difficulty Concentrating</a>
+                                <a href="http://www.counselingcalifornia.com/CCS/Difficulty-Concentrating/concentrating.aspx" target="_blank">Difficulty Concentrating</a>
                             </li>
                         </ul>
 
