--- a/public/rates.html
+++ b/public/rates.html
@@ -5,10 +5,8 @@
 <!-- Mirrored from stacyharrismft.com/rates by HTTrack Website Copier/3.x [XR&CO'2014], Thu, 07 Jun 2018 23:23:31 GMT -->
 
 <head>
-    <meta name="description" content="Stacy Harris' rates are $95.00 for a 50 minute session.  She is an out of network provider for most insurance companies; however, up to 80% of her services may be covered by your insurance."
-    />
-    <meta name="keywords" content="Stacy, Harris, marriage, family, therapist, counseling, therapy, counselor, family counseling, child counseling, Redding, CA, 96001"
-    />
+    <meta name="description" content="Stacy Harris' rates are $95.00 for a 50 minute session.  She is an out of network provider for most insurance companies; however, up to 80% of her services may be covered by your insurance." />
+    <meta name="keywords" content="Stacy, Harris, marriage, family, therapist, counseling, therapy, counselor, family counseling, child counseling, Redding, CA, 96001" />
     <meta name="author" content="Stacy Harris" />
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <title>Rates and Insurance</title>
@@ -16,17 +14,18 @@
     <link rel="stylesheet" type="text/css" href="style.css" />
     <link rel="stylesheet" href="search.css" type="text/css" />
     <script type="text/javascript">
-
         var _gaq = _gaq || [];
         _gaq.push(['_setAccount', 'UA-254292-20']);
         _gaq.push(['_trackPageview']);
 
-        (function () {
-            var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
+        (function() {
+            var ga = document.createElement('script');
+            ga.type = 'text/javascript';
+            ga.async = true;
             ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
-            var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
+            var s = document.getElementsByTagName('script')[0];
+            s.parentNode.insertBefore(ga, s);
         })();
-
     </script>
 </head>
 
@@ -35,10 +34,12 @@
 
     <div id="searchbar">
         <div id="cse" style="width: 100%;">Loading</div>
-        <script src="http://www.google.com/jsapi" type="text/javascript"></script>
+        <script src="https://www.google.com/jsapi" type="text/javascript"></script>
         <script type="text/javascript">
-            google.load('search', '1', { language: 'en' });
-            google.setOnLoadCallback(function () {
+            google.load('search', '1', {
+                language: 'en'
+            });
+            google.setOnLoadCallback(function() {
                 var customSearchControl = new google.search.CustomSearchControl(
                     '008606337386153782073:izxqcfcz90e');
 
@@ -125,9 +126,7 @@
 
                             <p>
                                 <b>Insurance</b>
-                                <br>I am an out of network provider for most insurance companies. Up to 80% of my services may
-                                be covered by your health insurance. Please call your insurance company to determine your
-                                coverage by asking:
+                                <br>I am an out of network provider for most insurance companies. Up to 80% of my services may be covered by your health insurance. Please call your insurance company to determine your coverage by asking:
                                 <ul>
                                     <li>Do I have out of network mental health benefits?</li>
                                     <li>What percentage of the mental health out of network service will be reimbursed to me?</li>
