--- a/public/contact.html
+++ b/public/contact.html
@@ -5,10 +5,8 @@
 <!-- Mirrored from stacyharrismft.com/contact by HTTrack Website Copier/3.x [XR&CO'2014], Thu, 07 Jun 2018 23:23:33 GMT -->
 
 <head>
-    <meta name="description" content="Stacy Harris' office is located at 1314 Oregon St, Redding CA, 96001.  Feel free to contact her through any of the following methods: Phone: (530) 242-6012, Email: stacyharrismft@yahoo.com, Fax: (530) 243-0327."
-    />
-    <meta name="keywords" content="Stacy, Harris, marriage, family, therapist, counseling, therapy, counselor, family counseling, child counseling, Redding, CA, 96001"
-    />
+    <meta name="description" content="Stacy Harris' office is located at 1314 Oregon St, Redding CA, 96001.  Feel free to contact her through any of the following methods: Phone: (530) 242-6012, Email: stacyharrismft@yahoo.com, Fax: (530) 243-0327." />
+    <meta name="keywords" content="Stacy, Harris, marriage, family, therapist, counseling, therapy, counselor, family counseling, child counseling, Redding, CA, 96001" />
     <meta name="author" content="Stacy Harris" />
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <title>Contact Me</title>
@@ -16,17 +14,18 @@
     <link rel="stylesheet" type="text/css" href="style.css" />
     <link rel="stylesheet" href="search.css" type="text/css" />
     <script type="text/javascript">
-
         var _gaq = _gaq || [];
         _gaq.push(['_setAccount', 'UA-254292-20']);
         _gaq.push(['_trackPageview']);
 
-        (function () {
-            var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
+        (function() {
+            var ga = document.createElement('script');
+            ga.type = 'text/javascript';
+            ga.async = true;
             ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
-            var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
+            var s = document.getElementsByTagName('script')[0];
+            s.parentNode.insertBefore(ga, s);
         })();
-
     </script>
 </head>
 
@@ -35,10 +34,12 @@
 
     <div id="searchbar">
         <div id="cse" style="width: 100%;">Loading</div>
-        <script src="http://www.google.com/jsapi" type="text/javascript"></script>
+        <script src="https://www.google.com/jsapi" type="text/javascript"></script>
         <script type="text/javascript">
-            google.load('search', '1', { language: 'en' });
-            google.setOnLoadCallback(function () {
+            google.load('search', '1', {
+                language: 'en'
+            });
+            google.setOnLoadCallback(function() {
                 var customSearchControl = new google.search.CustomSearchControl(
                     '008606337386153782073:izxqcfcz90e');
 
@@ -120,8 +121,8 @@
 
                         <h2>Contact Me</h2>
                         <hr />
-                        <p>Please contact me if you would like to setup an individual, couples or family therapy consultation
-                            today.</p>
+                        <p>Please contact me if you would like to setup an individual, couples or family therapy consultation today.
+                        </p>
                         <p>
                             <b>Stacy Harris LMFT</b>
                             <br>Licensed Marriage and Family Therapist
@@ -134,7 +135,7 @@
                             </address>
                             <br>
                             <br>
-                            <iframe width="425" height="350" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="http://maps.google.com/maps?hl=en&amp;q=1314+Oregon+St.++Redding,+CA+96001&amp;ie=UTF8&amp;hq=&amp;hnear=1314+Oregon+St,+Redding,+California+96001&amp;gl=us&amp;t=m&amp;vpsrc=6&amp;ll=40.589645,-122.390099&amp;spn=0.022813,0.036478&amp;z=14&amp;iwloc=A&amp;output=embed"></iframe>
+                            <iframe width="425" height="350" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="https://maps.google.com/maps?hl=en&amp;q=1314+Oregon+St.++Redding,+CA+96001&amp;ie=UTF8&amp;hq=&amp;hnear=1314+Oregon+St,+Redding,+California+96001&amp;gl=us&amp;t=m&amp;vpsrc=6&amp;ll=40.589645,-122.390099&amp;spn=0.022813,0.036478&amp;z=14&amp;iwloc=A&amp;output=embed"></iframe>
                             <br />
                             <small>
                                 <a href="http://maps.google.com/maps?hl=en&amp;q=1314+Oregon+St.++Redding,+CA+96001&amp;ie=UTF8&amp;hq=&amp;hnear=1314+Oregon+St,+Redding,+California+96001&amp;gl=us&amp;t=m&amp;vpsrc=6&amp;ll=40.589645,-122.390099&amp;spn=0.022813,0.036478&amp;z=14&amp;iwloc=A&amp;source=embed"
