--- a/public/intake_forms.html
+++ b/public/intake_forms.html
@@ -5,10 +5,8 @@
 <!-- Mirrored from stacyharrismft.com/intake_forms by HTTrack Website Copier/3.x [XR&CO'2014], Thu, 07 Jun 2018 23:23:31 GMT -->
 
 <head>
-    <meta name="description" content="Please download the form on this page, and fill it out to bring in with you for your visit."
-    />
-    <meta name="keywords" content="Stacy, Harris, marriage, family, therapist, counseling, therapy, counselor, family counseling, child counseling, Redding, CA, 96001"
-    />
+    <meta name="description" content="Please download the form on this page, and fill it out to bring in with you for your visit." />
+    <meta name="keywords" content="Stacy, Harris, marriage, family, therapist, counseling, therapy, counselor, family counseling, child counseling, Redding, CA, 96001" />
     <meta name="author" content="Stacy Harris" />
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <title>Forms</title>
@@ -16,17 +14,18 @@
     <link rel="stylesheet" type="text/css" href="style.css" />
     <link rel="stylesheet" href="search.css" type="text/css" />
     <script type="text/javascript">
-
         var _gaq = _gaq || [];
         _gaq.push(['_setAccount', 'UA-254292-20']);
         _gaq.push(['_trackPageview']);
 
-        (function () {
-            var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
+        (function() {
+            var ga = document.createElement('script');
+            ga.type = 'text/javascript';
+            ga.async = true;
             ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
-            var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
+            var s = document.getElementsByTagName('script')[0];
+            s.parentNode.insertBefore(ga, s);
         })();
-
     </script>
 </head>
 
@@ -35,10 +34,12 @@
 
     <div id="searchbar">
         <div id="cse" style="width: 100%;">Loading</div>
-        <script src="http://www.google.com/jsapi" type="text/javascript"></script>
+        <script src="https://www.google.com/jsapi" type="text/javascript"></script>
         <script type="text/javascript">
-            google.load('search', '1', { language: 'en' });
-            google.setOnLoadCallback(function () {
+            google.load('search', '1', {
+                language: 'en'
+            });
+            google.setOnLoadCallback(function() {
                 var customSearchControl = new google.search.CustomSearchControl(
                     '008606337386153782073:izxqcfcz90e');
 
