upgrading to now v2

--- a/public/services.html
+++ b/public/services.html
@@ -34,7 +34,7 @@
 
     <div id="searchbar">
         <div id="cse" style="width: 100%;">Loading</div>
-        <script src="http://www.google.com/jsapi" type="text/javascript"></script>
+        <script src="https://www.google.com/jsapi" type="text/javascript"></script>
         <script type="text/javascript">
             google.load('search', '1', { language: 'en' });
             google.setOnLoadCallback(function () {
